--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+body ,html {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin:0;
+}
+#root {
+  height: 100%;
+  width: 100%;
+}
